Remove stuff added to POM by the IDE
This breaks the build as the source code currently uses preview features.