@@ -13,19 +13,6 @@
 
     <name>Java 11 HTTP Client Utilities</name>
     <inceptionYear>2023</inceptionYear>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
     <url>https://github.com/northmaxdev/jep321util</url>
 
     <properties>
